[gd_scene load_steps=26 format=3 uid="uid://dfl8qsacj4yvt"]

[ext_resource type="Script" path="res://Scenes/Cats/Сat_o/cat_O.gd" id="1_q65ix"]
[ext_resource type="Texture2D" uid="uid://dxfifx8dgewtn" path="res://Sprites/Cats/Cat_O/Classic/Cat_O.png" id="2_46vyx"]
[ext_resource type="Texture2D" uid="uid://8axwwp5deins" path="res://Sprites/Cats/Cat_O/Classic/Cat_O_blinks.png" id="2_a0x4j"]
[ext_resource type="Texture2D" uid="uid://cl12svb74deey" path="res://Sprites/Cats/Cat_O/Classic/Cat_O_0.png" id="3_kkaq3"]
[ext_resource type="Script" path="res://Scenes/Cats/Сat_o/skeleton_cat.gd" id="3_m2d28"]
[ext_resource type="Texture2D" uid="uid://c2rk2kfrsvcy1" path="res://Sprites/Cats/Cat_O/Classic/Cat_O_1_3.png" id="4_0fxfv"]
[ext_resource type="Texture2D" uid="uid://d0vutlo6h5blv" path="res://Sprites/Cats/Cat_O/Classic/Cat_O_meow.png" id="4_8hlpa"]
[ext_resource type="Texture2D" uid="uid://cae07jqnoj8hv" path="res://Sprites/Cats/Cat_O/Classic/Cat_O_2.png" id="5_r8u8d"]
[ext_resource type="Texture2D" uid="uid://b1qdplovst0nm" path="res://Sprites/Cats/Cat_O/Classic/Cat_O_4.png" id="6_mgf78"]
[ext_resource type="Script" path="res://addons/random_timer/random_timer.gd" id="9_sqbvy"]
[ext_resource type="AudioStream" uid="uid://cg5wq1d1d6jr3" path="res://Sounds/Cats/Rotate_cat.mp3" id="11_s60cc"]
[ext_resource type="AudioStream" uid="uid://dt138qe8t2i3f" path="res://Sounds/Cats/Drag/Drag_cat_O.mp3" id="12_5rarn"]
[ext_resource type="AudioStream" uid="uid://qcve4gbp6l5w" path="res://Sounds/Cats/Cat_O_blinks.mp3" id="13_dco6j"]
[ext_resource type="AudioStream" uid="uid://ciewpd0wnfh07" path="res://Sounds/Cats/Meows/Cat_O/meow_Cat_O_0.mp3" id="14_xrj6v"]
[ext_resource type="AudioStream" uid="uid://d4gn5um00vq2d" path="res://Sounds/Cats/Meows/Cat_O/meow_Cat_O_1.mp3" id="15_kdu8j"]
[ext_resource type="AudioStream" uid="uid://c8ur1y0an5vjn" path="res://Sounds/Cats/Meows/Cat_O/meow_Cat_O_2.mp3" id="16_22hrh"]
[ext_resource type="AudioStream" uid="uid://dhahxtbb32bgy" path="res://Sounds/Cats/Meows/Cat_O/meow_Cat_O_3.mp3" id="17_jq4o5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uvig5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_a0x4j")
}, {
"duration": 1.0,
"texture": ExtResource("2_a0x4j")
}, {
"duration": 1.0,
"texture": ExtResource("2_a0x4j")
}, {
"duration": 1.0,
"texture": ExtResource("2_a0x4j")
}, {
"duration": 1.0,
"texture": ExtResource("2_a0x4j")
}, {
"duration": 1.0,
"texture": ExtResource("2_a0x4j")
}, {
"duration": 1.0,
"texture": ExtResource("2_46vyx")
}],
"loop": false,
"name": &"blinks_classic",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_46vyx")
}],
"loop": false,
"name": &"idle_classic",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8hlpa")
}, {
"duration": 1.0,
"texture": ExtResource("4_8hlpa")
}, {
"duration": 1.0,
"texture": ExtResource("4_8hlpa")
}, {
"duration": 1.0,
"texture": ExtResource("2_46vyx")
}],
"loop": false,
"name": &"meow_classic",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_nnhjx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kkaq3")
}, {
"duration": 1.0,
"texture": ExtResource("4_0fxfv")
}, {
"duration": 1.0,
"texture": ExtResource("5_r8u8d")
}, {
"duration": 1.0,
"texture": ExtResource("4_0fxfv")
}, {
"duration": 1.0,
"texture": ExtResource("6_mgf78")
}, {
"duration": 1.0,
"texture": ExtResource("3_kkaq3")
}, {
"duration": 1.0,
"texture": ExtResource("3_kkaq3")
}, {
"duration": 1.0,
"texture": ExtResource("3_kkaq3")
}, {
"duration": 1.0,
"texture": ExtResource("4_0fxfv")
}, {
"duration": 1.0,
"texture": ExtResource("5_r8u8d")
}, {
"duration": 1.0,
"texture": ExtResource("4_0fxfv")
}, {
"duration": 1.0,
"texture": ExtResource("3_kkaq3")
}, {
"duration": 1.0,
"texture": ExtResource("3_kkaq3")
}, {
"duration": 1.0,
"texture": ExtResource("3_kkaq3")
}],
"loop": true,
"name": &"Cat_O_move_Classic",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdcig"]
size = Vector2(160, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_josus"]
size = Vector2(100, 100)

[sub_resource type="Animation" id="Animation_20ew2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_Cat_O:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_mghvl"]
resource_name = "scale"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_Cat_O:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.55, 0.55), Vector2(0.48, 0.48), Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_jw5gr"]
resource_name = "sleep"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_Cat_O:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 2.4, 3.6, 4.8, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.52, 0.52), Vector2(0.5, 0.5), Vector2(0.52, 0.52), Vector2(0.5, 0.5), Vector2(0.52, 0.52)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n7ck7"]
_data = {
"RESET": SubResource("Animation_20ew2"),
"scale": SubResource("Animation_mghvl"),
"sleep": SubResource("Animation_jw5gr")
}

[node name="Cat_O" type="CharacterBody2D"]
collision_mask = 0
input_pickable = true
script = ExtResource("1_q65ix")

[node name="Sprite_Cat_O" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_uvig5")
animation = &"blinks_classic"

[node name="Cat_O_animation" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-4, 53)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_nnhjx")
animation = &"Cat_O_move_Classic"

[node name="Color_tiles" type="ColorRect" parent="."]
unique_name_in_owner = true
show_behind_parent = true
custom_minimum_size = Vector2(176, 176)
offset_left = -79.0
offset_top = -79.0003
offset_right = 97.0
offset_bottom = 96.9997
scale = Vector2(0.9, 0.9)
color = Color(0.0766054, 0.225596, 0.112406, 0.535)
metadata/_edit_use_anchors_ = true

[node name="Collision_touch" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_fdcig")
debug_color = Color(0.652468, 0.507776, 0.299182, 0.42)

[node name="Skeleton_cat" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 2
script = ExtResource("3_m2d28")

[node name="CollisionShape2D_skeleton" type="CollisionShape2D" parent="Skeleton_cat"]
shape = SubResource("RectangleShape2D_josus")

[node name="RandomTimer_blinks" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
script = ExtResource("9_sqbvy")
min_wait_time = 15.0
max_wait_time = 20.0

[node name="RandomTimer_meow" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
script = ExtResource("9_sqbvy")
min_wait_time = 50.0
max_wait_time = 70.0

[node name="Animation_in_field" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_n7ck7")
}

[node name="Sounds" type="Node" parent="."]

[node name="Sound_rotate" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("11_s60cc")

[node name="Sound_drag" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("12_5rarn")
volume_db = -15.0

[node name="Sound_blinks" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("13_dco6j")
volume_db = -15.0

[node name="meows_sounds" type="Node" parent="Sounds"]
unique_name_in_owner = true

[node name="Sound_meow_0" type="AudioStreamPlayer" parent="Sounds/meows_sounds"]
stream = ExtResource("14_xrj6v")
volume_db = -15.0

[node name="Sound_meow_1" type="AudioStreamPlayer" parent="Sounds/meows_sounds"]
stream = ExtResource("15_kdu8j")
volume_db = -15.0

[node name="Sound_meow_2" type="AudioStreamPlayer" parent="Sounds/meows_sounds"]
stream = ExtResource("16_22hrh")
volume_db = -15.0

[node name="Sound_meow_3" type="AudioStreamPlayer" parent="Sounds/meows_sounds"]
stream = ExtResource("17_jq4o5")
volume_db = -15.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="RandomTimer_blinks" to="." method="_on_random_timer_blinks_timeout"]
[connection signal="timeout" from="RandomTimer_meow" to="." method="_on_random_timer_meow_timeout"]
